tests/snapshots/files__shared_snapshot_multiset.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Num 5)
 (square 3))
