tests/snapshots/files__shared_snapshot_naive_action_lookup.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((f 2)
 (result 2)
 (trigger 2))
