tests/snapshots/files__shared_snapshot_name_resolution.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
Add: 2
Add: 2
Num: 5
Num: 5
Add: 2
Add: 2
Num: 5
Num: 5
