tests/snapshots/files__shared_snapshot_paged_llama.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Add 13)
 (Bf16 1)
 (Bool 0)
 (Cast 5)
 (ComputeAttnMask 0)
 (Constant 8)
 (ConsumedBuffer 0)
 (CustomOpKind 0)
 (ECons 116)
 (ENil 1)
 (Exp2 3)
 (F16 1)
 (F32 1)
 (F4E2M1 0)
 (F8E4M3 0)
 (F8E5M2 0)
 (F8UE8M0 0)
 (FlashInferAttention 1)
 (FusedAdd 10)
 (FusedExp 3)
 (FusedExp2 3)
 (FusedLog2 0)
 (FusedMul 19)
 (FusedRecip 3)
 (FusedSin 1)
 (FusedSqrt 1)
 (FusionEnd 10)
 (FusionStart 25)
 (GLUMoE 0)
 (Gather 6)
 (I4 0)
 (ICons 1306)
 (INil 1)
 (Input 360)
 (Int 1)
 (Iota 15)
 (KernelAdd 13)
 (KernelBatchMatMul 0)
 (KernelBatchMatVec 0)
 (KernelCast 5)
 (KernelConstant 8)
 (KernelEmbed 0)
 (KernelExp 3)
 (KernelExp2 3)
 (KernelGather 6)
 (KernelIota 15)
 (KernelLessThan 0)
 (KernelLog2 0)
 (KernelMax 1)
 (KernelMean 0)
 (KernelMod 0)
 (KernelMul 33)
 (KernelRecip 5)
 (KernelScatter 2)
 (KernelScatterNoCopy 2)
 (KernelSigmoid 1)
 (KernelSin 1)
 (KernelSoftmax 0)
 (KernelSqrt 1)
 (KernelSum 10)
 (LessThan 0)
 (Log2 0)
 (LoopEnd 1)
 (LoopInput 11)
 (LoopInputStatic 0)
 (LoopOutput 2)
 (LoopOutputSelect 62)
 (LoopStart 1)
 (MAdd 16)
 (MAnd 0)
 (MCeilDiv 11)
 (MDiv 6)
 (MFloat 0)
 (MFloorTo 0)
 (MGte 1)
 (MIter 1)
 (MLt 1)
 (MMax 4)
 (MMin 1)
 (MMod 4)
 (MMul 283)
 (MNum 20)
 (MOr 0)
 (MReplace 0)
 (MReplaceList 0)
 (MSub 1)
 (MVar 2)
 (Max 1)
 (MkGLUMoEExpertGatherState 0)
 (MkGLUMoEExpertIndexState 3)
 (MkGLUMoEGateUpState 0)
 (MkGLUMoEGemmaDownState 0)
 (MkGLUMoEGemmaGELUState 0)
 (MkGLUMoESwiGLUDownState 0)
 (MkGLUMoESwiGLUState 0)
 (MkKernelSigmoidScaledState 2)
 (Mod 0)
 (Mul 33)
 (Op 1235)
 (Output 356)
 (OutputJoin 355)
 (Recip 5)
 (RemoveNthFromEnd 0)
 (ReplaceNthFromEnd 0)
 (RowMajor 0)
 (Scatter 2)
 (Sin 1)
 (Softmax 0)
 (Sqrt 1)
 (Sum 10)
 (TF32 1)
 (consumed_buffer_ilist_contains 6846)
 (cublaslt 16)
 (cublaslt_base_dtype 4)
 (cuda_local_memory 1641)
 (cuda_output_bytes 184)
 (dtype 1024)
 (glumoe_expert_gather 0)
 (glumoe_expert_index 3)
 (glumoe_gate_up 0)
 (glumoe_gemma_down 0)
 (glumoe_gemma_gelu 0)
 (glumoe_swiglu 0)
 (glumoe_swiglu_down 0)
 (identical_inputs 581)
 (kernel_sigmoid_scaled 2)
 (len 0)
 (n_elements 0)
 (nth_from_end 0))
