tests/snapshots/files__shared_snapshot_pair_userland_proof.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(let t0 (Box (Pair (A) 2)))
(let t1 (boxed-first t0 (A)))
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Rule
      (= t1 t1)
      (name "project-userland-pair")
      (premises (Fiat (= t0 t0)))
      (substitution (first (A)) (second 2) (box t0)))
    (Fiat (= (A) (A))))
  (substitution (@n (A))))
(let t0 (Box (Pair (A) 2)))
(let t1 (boxed-second t0 2))
(Rule
  (= (@ExistsConstructor1) (@ExistsConstructor1))
  (name "@prove_exists_rule1")
  (premises
    (Rule
      (= t1 t1)
      (name "project-userland-pair")
      (premises (Fiat (= t0 t0)))
      (substitution (first (A)) (second 2) (box t0)))
    (Fiat (= 2 2)))
  (substitution (@n1 2)))
(let t0 (Box (Pair (A) 2)))
(Congr
  (= t0 (Box (Pair (B) 2)))
  (Fiat (= t0 t0))
  (Congr
    (= (Pair (A) 2) (Pair (B) 2))
    (Fiat (= (Pair (A) 2) (Pair (A) 2)))
    (Sym (= (A) (B)) (Fiat (= (B) (A))))
    0)
  0)
(let t0 (Box (Pair (A) 2)))
(let t1 (boxed-first t0 (A)))
(Rule
  (= (@ExistsConstructor3) (@ExistsConstructor3))
  (name "@prove_exists_rule3")
  (premises
    (Rule
      (= t1 t1)
      (name "project-userland-pair")
      (premises (Fiat (= t0 t0)))
      (substitution (first (A)) (second 2) (box t0)))
    (Sym (= (A) (B)) (Fiat (= (B) (A)))))
  (substitution (@n2 (A))))
((A 1)
 (B 1)
 (Box 1)
 (Pair 1)
 (boxed-first 1)
 (boxed-second 1))
