tests/snapshots/files__shared_snapshot_path_union.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
edge: 3
edge: 3
mk: 5
mk: 5
path: 6
path: 6
