tests/snapshots/files__shared_snapshot_pathproof.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
Edge: 3
Edge: 3
Trans: 6
Trans: 6
edge: 3
edge: 3
path: 9
path: 9
