tests/snapshots/files__shared_snapshot_primitive_args.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(let t_0 (MathU (Add (Const 5) (Const 1))))
(Rule
  (= t_0 t_0)
  (name
    "(rule ((MathU (Const a))
       (> (+ a 1) 5))
      ((MathU (Add (Const a) (Const 1))))
         )")
  (premises (Fiat (= (MathU (Const 5)) (MathU (Const 5)))) (Fiat (= () ())))
  (substitution (a 5)))
((Add 1)
 (Const 2)
 (MathU 2)
 (Mul 0))
